--- a/Furnlite.com/Furnlite/index-2.html
+++ b/Furnlite.com/Furnlite/index-2.html
@@ -31,7 +31,7 @@
                         <div class="row align-items-center">
                              <div class="col-xl-2 col-lg-2">
                                 <div class="logo">
-                                    <a href="index-2.html"><img src="img/logo/1707208486641 (8).png" alt="logo"></a>
+                                    <a href="index-2.html"><img src="img/logo/1707208486641(3).png" alt="logo"></a>
                                 </div>
                             </div>
                            <div class="col-xl-8 col-lg-8">
@@ -135,6 +135,7 @@
                                 <div class="col-lg-7 col-md-12">
                                     <div class="slider-content s-slider-content mt-20">
                                          <h2 data-animation="fadeInUp" data-delay=".4s">Design Your Dream Home With Us</h2>
+                                         <h3 data-animation="fadeInUp" data-delay=".4s" style="background: linear-gradient(to bottom, #00CC00 0%, #00FFCC 100%); background-clip: text; -webkit-background-clip: text; color: transparent;">The Divine Comfort</h3>
                                          <p data-animation="fadeInDown" data-delay=".4s">Elevate your space with Furnlite's bespoke designs and high-quality materials. Experience luxury living like never before.</p>    
                                     </div>
                                      <div class="slider-btn mt-30 ml">     
@@ -182,6 +183,7 @@
                                 <div class="col-lg-7 col-md-12">
                                     <div class="slider-content s-slider-content mt-20">
                                          <h2 data-animation="fadeInUp" data-delay=".4s">Design Your Dream Home With Us</h2>
+                                         <h3 data-animation="fadeInUp" data-delay=".4s" style="background: linear-gradient(to bottom, #00CC00 0%, #00FFCC 100%); background-clip: text; -webkit-background-clip: text; color: transparent;">The Divine Comfort</h3>
                                          <p data-animation="fadeInDown" data-delay=".4s">Elevate your space with Furnlite's bespoke designs and high-quality materials. Experience luxury living like never before.</p>    
                                     </div>
                                      <div class="slider-btn mt-30 ml">     
@@ -229,6 +231,7 @@
                                <div class="col-lg-7 col-md-12">
                                     <div class="slider-content s-slider-content mt-20">
                                          <h2 data-animation="fadeInUp" data-delay=".4s">Design Your Dream Home With Us</h2>
+                                         <h3 data-animation="fadeInUp" data-delay=".4s" style="background: linear-gradient(to bottom, #00CC00 0%, #00FFCC 100%); background-clip: text; -webkit-background-clip: text; color: transparent;">The Divine Comfort</h3>
                                          <p data-animation="fadeInDown" data-delay=".4s">Elevate your space with Furnlite's bespoke designs and high-quality materials. Experience luxury living like never before.</p>    
                                     </div>
                                      <div class="slider-btn mt-30 ml">     
@@ -269,8 +272,9 @@
                                     <h2>We Provide You Best Experience</h2>                                   
                                 </div>
                                     <p class="pline">Our signature design process comes standard…refresh, remodel, new and enjoyable design experience</p>
-                                    <p>At Furnlite, we are dedicated to creating dream interiors that embody your individual style and vision. Our team of talented designers is committed to providing comprehensive design services, utilizing innovative AI technology to personalize your experience.</p>
-                                    <p>We specialize in custom furniture solutions, working closely with skilled craftsmen to bring your unique ideas to life.</p>
+                                    <p class="pline">At Furnlite, we are dedicated to creating dream interiors that embody your individual style and vision. Our team of talented designers is committed to providing comprehensive design services, utilizing innovative AI technology to personalize your experience.</p>
+                                    <p class="pline">We specialize in custom furniture solutions, working closely with skilled craftsmen to bring your unique ideas to life.</p>
+                                    <p class="pline"> <span style="font-weight: bold;">"The Divine Comfort"</span>  in every Furnlite Creation.</p>
                                     <div class="row align-items-center mt-20">
                                     <div class="col-lg-4"> 
                                         <div class="slider-btn">                                          
@@ -293,7 +297,7 @@
             <!-- about-area-end -->
             
              <!-- services-three-area -->
-            <section id="services" class="services-area services-bg  p-relative fix pt-120 pb-90" style="background-image: url(img/bg/service-bg.png); background-size: cover;">  
+            <section id="services" class="services-area services-bg  p-relative fix pt-120 pb-90">  
                 <div class="container">
                     <div class="row justify-content-center align-items-center">
                             <div class="col-lg-12 col-md-12">
@@ -314,8 +318,8 @@
                                <img src="img/icon/se-icon1.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="single-service.html">Architecture</a></h5>
-                                <p>We Provide Best Architecture Experience To Our Clients For Their Dream Home.</p>
+                                <h5><a href="single-service.html">Office Solutions</a></h5>
+                                <p>We belive in design and engineer the office solution to make the work environment stress free, limitless, motivating, pleasure and off course comfortable.  At the same time to allow the <span style="font-weight: bold; color: rgb(23, 138, 23);">"Divine Comfort"</span> </p>
                             </div>
                             </div>
                         </div>
@@ -325,8 +329,8 @@
                                <img src="img/icon/se-icon2.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="single-service.html">Inter Design</a></h5>
-                                <p>Trust us to elevate your interior design experience and make your dream space a reality.</p>
+                                <h5><a href="single-service.html">Interior Designing</a></h5>
+                                <p>Trust us to elevate your interior design experience and make your dream space a reality. Transform your space into a functional and stylish haven. Our expert interior designers will collaborate with you to understand your vision and design.</p>
                             </div>
                             </div>
                         </div>
@@ -336,8 +340,8 @@
                                <img src="img/icon/se-icon3.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="single-service.html">Retail Designs</a></h5>
-                                <p>We elevate your retail desing experience. </p>
+                                <h5><a href="single-service.html">Home & Space</a></h5>
+                                <p>The motto for #TEAMFURNLITE is to get the engineering via emotion, we understand our clients emotion, genie wishes and tiny details which gives soothing ambience. But the common is <span style="font-weight: bold; color: rgb(23, 138, 23);">"Divine Comfort"</span> </p>
                             </div>
                             </div>
                         </div>
@@ -347,8 +351,8 @@
                                <img src="img/icon/se-icon4.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="single-service.html">Decoration Art</a></h5>
-                                <p>our vision is to create exceptional living spaces that reflect the individuality and style of each client.</p>
+                                <h5><a href="single-service.html">Retail Outlets Solutions</a></h5>
+                                <p>At Furnlite, we strive to unite Elegancewith engineering, we are equipped with all metal-wood working machineries to deliver the sturdy yet beautiful storage solutions to retail outlets. Shine your brand, use your inch-square spaces.</p>
                             </div>
                             </div>
                         </div>
@@ -358,8 +362,8 @@
                                <img src="img/icon/se-icon5.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="single-service.html">Interior Work</a></h5>
-                                <p>Our innovative AI-powered design assistance tool helps us understand our clients' preferences.</p>
+                                <h5><a href="single-service.html">ClassRoom Solutions</a></h5>
+                                <p>Our innovative design team always look for challenges, kids invest there some time at schools and class rooms, and we care for that with our advance class room solutions to maximize the efficiency of everything. Transform your space into a functional, classy and stylish haven. </p>
                             </div>
                             </div>
                         </div>
@@ -369,8 +373,12 @@
                                <img src="img/icon/se-icon6.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="single-service.html">2D/3D Layouts</a></h5>
-                                <p>We provides better 2D/3D layouts of the projects to our clients for understanding their needs.</p>
+                                <h5><a href="single-service.html">Our Other Services</a></h5>
+                                <p>1. 5000 SQFT Desgin center</p>
+                                <p>2. Metal processing set-up</p>
+                                <p>3. Fiber laser cutting</p>
+                                <p>4. Wood processing</p>
+                                <p>5. Edge bending</p>
                             </div>
                             </div>
                         </div>
@@ -453,7 +461,7 @@
             </section>
             <!-- gallery-area-end -->
              <!-- team-area -->
-            <section id="team" class="team-area fix p-relative pt-120 pb-90" style="background: #1e1e1e;">  
+            <section id="team" class="team-area fix p-relative pt-120 pb-90">  
                 <div class="container">  
                      <div class="row">
                         <div class="col-lg-12">
@@ -582,7 +590,7 @@
             </section>
             <!-- team-area-end --> 
             <!-- steps-area -->
-            <section class="steps-area fix p-relative"  style="background-color: #161616;background-image: url(img/bg/steps-bg.png); background-size: cover;">
+            <section class="steps-area fix p-relative">
                 <div class="container">
           
                     <div class="row align-items-center">
@@ -640,7 +648,7 @@
             </section>
             <!-- steps-area-end -->
              <!-- testimonial-area -->
-            <section id="testimonial" class="testimonial-area text-center p-relative fix pt-120 pb-100" style="background-color: #1e1e1e;background-image: url(img/bg/testimonial-bg.png); background-size: cover;">
+            <section id="testimonial" class="testimonial-area text-center p-relative fix pt-120 pb-100">
                 <div class="container">
                     <div class="row">                    
                         <div class="col-lg-12">
