--- a/Furnlite.com/Furnlite/service.html
+++ b/Furnlite.com/Furnlite/service.html
@@ -118,7 +118,7 @@
                         <div class="col-xl-12 col-lg-12">
                             <div class="breadcrumb-wrap text-center">
                                 <div class="breadcrumb-title">
-                                    <h2>Service</h2>    
+                                    <h2 style="color: #fff;">Service</h2>    
                                     <div class="breadcrumb-wrap">
                               
                                 <nav aria-label="breadcrumb">
@@ -146,8 +146,8 @@
                                <img src="img/icon/se-icon1.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="single-service.html">Architecture</a></h5>
-                                <p>We Provide Best Architecture Experience To Our Clients For Their Dream Home.</p>
+                                <h5><a href="single-service.html">Office Solutions</a></h5>
+                                <p>We belive in design and engineer the office solution to make the work environment stress free, limitless, motivating, pleasure and off course comfortable.  At the same time to allow the <span style="font-weight: bold; color: rgb(23, 138, 23);">"Divine Comfort"</span> </p>
                             </div>
                             </div>
                         </div>
@@ -157,8 +157,8 @@
                                <img src="img/icon/se-icon2.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="single-service.html">Inter Design</a></h5>
-                                <p>Trust us to elevate your interior design experience and make your dream space a reality.</p>
+                                <h5><a href="single-service.html">Interior Designing</a></h5>
+                                <p>Trust us to elevate your interior design experience and make your dream space a reality. Transform your space into a functional and stylish haven. Our expert interior designers will collaborate with you to understand your vision and design.</p>
                             </div>
                             </div>
                         </div>
@@ -168,8 +168,8 @@
                                <img src="img/icon/se-icon3.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="single-service.html">Retail Designs</a></h5>
-                                <p>We elevate your retail desing experience.</p>
+                                <h5><a href="single-service.html">Home & Space</a></h5>
+                                <p>The motto for #TEAMFURNLITE is to get the engineering via emotion, we understand our clients emotion, genie wishes and tiny details which gives soothing ambience. But the common is <span style="font-weight: bold; color: rgb(23, 138, 23);">"Divine Comfort"</span> </p>
                             </div>
                             </div>
                         </div>
@@ -179,8 +179,8 @@
                                <img src="img/icon/se-icon4.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="single-service.html">Decoration Art</a></h5>
-                                <p>our vision is to create exceptional living spaces that reflect the individuality and style of each client.</p>
+                                <h5><a href="single-service.html">Retail Outlets Solutions</a></h5>
+                                <p>At Furnlite, we strive to unite Elegancewith engineering, we are equipped with all metal-wood working machineries to deliver the sturdy yet beautiful storage solutions to retail outlets. Shine your brand, use your inch-square spaces.</p>
                             </div>
                             </div>
                         </div>
@@ -190,8 +190,8 @@
                                <img src="img/icon/se-icon5.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="single-service.html">Interior Work</a></h5>
-                                <p>Our innovative AI-powered design assistance tool helps us understand our clients' preferences.</p>
+                                <h5><a href="single-service.html">ClassRoom Solutions</a></h5>
+                                <p>Our innovative design team always look for challenges, kids invest there some time at schools and class rooms, and we care for that with our advance class room solutions to maximize the efficiency of everything. Transform your space into a functional, classy and stylish haven. </p>
                             </div>
                             </div>
                         </div>
@@ -201,8 +201,12 @@
                                <img src="img/icon/se-icon6.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="single-service.html">2D/3D Layouts</a></h5>
-                                <p>We provides better 2D/3D layouts of the projects to our clients for understanding their needs.</p>
+                                <h5><a href="single-service.html">Our Other Services</a></h5>
+                                <p>1. 5000 SQFT Desgin center</p>
+                                <p>2. Metal processing set-up</p>
+                                <p>3. Fiber laser cutting</p>
+                                <p>4. Wood processing</p>
+                                <p>5. Edge bending</p>
                             </div>
                             </div>
                         </div>
