--- a/Furnlite.com/Furnlite/team-single.html
+++ b/Furnlite.com/Furnlite/team-single.html
@@ -118,7 +118,7 @@
                         <div class="col-xl-12 col-lg-12">
                             <div class="breadcrumb-wrap text-center">
                                 <div class="breadcrumb-title">
-                                    <h2>Team Details</h2>    
+                                    <h2 style="color: #fff;">Team Details</h2>    
                                     <div class="breadcrumb-wrap">
                               
                                 <nav aria-label="breadcrumb">
@@ -148,7 +148,7 @@
                                      <img src="img/team/team01.jpg" alt="img">
                                  </div>
                                   <div class="per-info">
-                                                     <h4>Personal Info</h4> 
+                                                     <h4 style="color: #fff;">Personal Info</h4> 
                                                         <ul>                                                           
                                                             <li>
                                                                 <div class="icon"><i class="fal fa-user"></i> <strong>Name</strong></div>
