--- a/Furnlite.com/Furnlite/blog-details.html
+++ b/Furnlite.com/Furnlite/blog-details.html
@@ -117,7 +117,7 @@
                         <div class="col-xl-12 col-lg-12">
                             <div class="breadcrumb-wrap text-center">
                                 <div class="breadcrumb-title">
-                                    <h2>Blog Details</h2>    
+                                    <h2 style="color: #fff;">Blog Details</h2>    
                                     <div class="breadcrumb-wrap">
                               
                                 <nav aria-label="breadcrumb">
@@ -146,16 +146,16 @@
                                         have more control.</h2>
                                     <div class="meta-info">
                                         <ul>
-                                            <li><i class="fal fa-eye"></i> 100 Views  </li>
-                                            <li><i class="fal fa-comments"></i> 35 Comments</li>
-                                            <li><i class="fal fa-calendar-alt"></i> 24th March 2019</li>
+                                            <li style="color: black;"><i class="fal fa-eye" style="color: black;"></i> 100 Views  </li>
+                                            <li style="color: black;"><i class="fal fa-comments" style="color: black;"></i> 35 Comments</li>
+                                            <li style="color: black;"><i class="fal fa-calendar-alt" style="color: black;"></i> 24th March 2019</li>
                                         </ul>
                                     </div>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo amet set for your cool happiness for lyour loyal city.</p>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deser unt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusant ium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit asperna tur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisq.</p>
                                     <blockquote>
                                         <footer>By Rosalina Pong</footer>
-                                        <h3>Viral dreamcatcher keytar typewriter, aest hetic offal umami. Aesthetic polaroid pug pitchfork post-ironic.</h3>
+                                        <h3 style="color: #fff;">Viral dreamcatcher keytar typewriter, aest hetic offal umami. Aesthetic polaroid pug pitchfork post-ironic.</h3>
                                     </blockquote>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deser unt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusant.</p>
                                     <div class="details__content-img">
@@ -171,9 +171,9 @@
                                             <div class="post__tag">
                                                 <h5>Releted Tags</h5>
                                                 <ul>
-                                                    <li><a href="#">organic</a></li>
-                                                    <li><a href="#">Foods</a></li>
-                                                    <li><a href="#">tasty</a></li>
+                                                    <li ><a href="#" style="color: black;">organic</a></li>
+                                                    <li ><a href="#" style="color: black;">Foods</a></li>
+                                                    <li ><a href="#" style="color: black;">tasty</a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -235,7 +235,7 @@
                                         <img src="img/blog/comment/avatar.png" alt="">
                                     </div>
                                     <div class="avatar__info">
-                                        <h5>Rosalina William</h5>
+                                        <h5 style="color: #fff;">Rosalina William</h5>
                                         <div class="avatar__info-social">
                                             <a href="#"><i class="fab fa-facebook-f"></i></a>
                                             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -315,7 +315,7 @@
                         <div class="col-sm-12 col-md-12 col-lg-4">
                            <aside class="sidebar-widget">
                               <section id="search-3" class="widget widget_search">
-                                 <h2 class="widget-title">Search</h2>
+                                 <h2 class="widget-title" style="color: #fff;">Search</h2>
                                  <form role="search" method="get" class="search-form" action="http://wordpress.zcube.in/finco/">
                                     <label>
                                     <span class="screen-reader-text">Search for:</span>
@@ -325,7 +325,7 @@
                                  </form>
                               </section>
                               <section id="custom_html-5" class="widget_text widget widget_custom_html">
-                                 <h2 class="widget-title">Follow Us</h2>
+                                 <h2 class="widget-title" style="color: #fff;">Follow Us</h2>
                                  <div class="textwidget custom-html-widget">
                                     <div class="widget-social">
                                        <a href="#"><i class="fab fa-twitter"></i></a>
@@ -337,7 +337,7 @@
                                  </div>
                               </section>
                               <section id="categories-1" class="widget widget_categories">
-                                 <h2 class="widget-title">Categories</h2>
+                                 <h2 class="widget-title" style="color: #fff;">Categories</h2>
                                  <ul>
                                     <li class="cat-item cat-item-16"><a href="#">Branding</a> (4)</li>
                                     <li class="cat-item cat-item-23"><a href="#">Corporat</a> (3)</li>
@@ -346,7 +346,7 @@
                                  </ul>
                               </section>
                               <section id="recent-posts-4" class="widget widget_recent_entries">
-                                 <h2 class="widget-title">Recent Posts</h2>
+                                 <h2 class="widget-title" style="color: #fff;">Recent Posts</h2>
                                  <ul>
                                     <li>
                                        <a href="#">User Experience Psychology And Performance Smshing</a>
@@ -363,7 +363,7 @@
                                  </ul>
                               </section>
                               <section id="tag_cloud-1" class="widget widget_tag_cloud">
-                                 <h2 class="widget-title">Tag</h2>
+                                 <h2 class="widget-title" style="color: #fff;">Tag</h2>
                                  <div class="tagcloud">
                                      <a href="#" class="tag-cloud-link tag-link-28 tag-link-position-1" style="font-size: 8pt;" aria-label="app (1 item)">app</a>
                                     <a href="#" class="tag-cloud-link tag-link-17 tag-link-position-2" style="font-size: 8pt;" aria-label="Branding (1 item)">Branding</a>
