--- a/Furnlite.com/Furnlite/blog.html
+++ b/Furnlite.com/Furnlite/blog.html
@@ -117,7 +117,7 @@
                         <div class="col-xl-12 col-lg-12">
                             <div class="breadcrumb-wrap text-center">
                                 <div class="breadcrumb-title">
-                                    <h2>Blog</h2>    
+                                    <h2 style="color: #fff;">Blog</h2>    
                                     <div class="breadcrumb-wrap">
                               
                                 <nav aria-label="breadcrumb">
@@ -151,7 +151,7 @@
                                             <li><i class="fal fa-calendar-alt"></i>  24th March 2024</li>
                                         </ul>
                                     </div>
-                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit amet, consectetur
+                                    <h2 style="color: #fff;"><a href="blog-details.html">Lorem ipsum dolor sit amet, consectetur
                                             cing elit, sed do eiusmod tempor.</a></h2>
                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
                                     <div class="blog__btn">
@@ -171,7 +171,7 @@
                                             <li><i class="far fa-comments"></i>35 Comments</li>
                                         </ul>
                                     </div>
-                                    <h2><a href="blog-details.html">There are many variations passages of like consectetur lorem ipsum available.</a></h2>
+                                    <h2 style="color: #fff;"><a href="blog-details.html">There are many variations passages of like consectetur lorem ipsum available.</a></h2>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
                                     <div class="blog__btn">
                                         <a href="#" class="btn">Read More</a>
@@ -197,7 +197,7 @@
                                             <li><i class="fal fa-calendar-alt"></i>  24th March 2024</li>
                                         </ul>
                                     </div>
-                                    <h2><a href="blog-details.html">I must explain to you how all this mistaken idea of denouncing pleasure.</a></h2>
+                                    <h2 style="color: #fff;"><a href="blog-details.html">I must explain to you how all this mistaken idea of denouncing pleasure.</a></h2>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
                                     <div class="blog__btn">
                                         <a href="#" class="btn">Read More</a>
@@ -215,7 +215,7 @@
                                             <li><i class="fal fa-calendar-alt"></i>  24th March 2024</li>
                                         </ul>
                                     </div>
-                                    <h2><a href="blog-details.html">There are many variations passages of like consectetur lorem ipsum available.</a></h2>
+                                    <h2 style="color: #fff;"><a href="blog-details.html">There are many variations passages of like consectetur lorem ipsum available.</a></h2>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
                                     <div class="blog__btn">
                                         <a href="#" class="btn">Read More</a>
@@ -230,7 +230,7 @@
                                             <li><i class="fal fa-calendar-alt"></i>  24th March 2024</li>
                                         </ul>
                                     </div>
-                                    <h2><a href="blog-details.html">On the other hand, we denounce with of righteous indignation and dislike men.</a></h2>
+                                    <h2 style="color: #fff;"><a href="blog-details.html">On the other hand, we denounce with of righteous indignation and dislike men.</a></h2>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate velit esse.</p>
                                     <div class="blog__btn">
                                         <a href="#" class="btn">Read More</a>
@@ -255,7 +255,7 @@
                          <div class="col-sm-12 col-md-12 col-lg-4">
                            <aside class="sidebar-widget">
                               <section id="search-3" class="widget widget_search">
-                                 <h2 class="widget-title">Search</h2>
+                                 <h2 class="widget-title" style="color: #fff;">Search</h2>
                                  <form role="search" method="get" class="search-form" action="http://wordpress.zcube.in/finco/">
                                     <label>
                                     <span class="screen-reader-text">Search for:</span>
@@ -265,7 +265,7 @@
                                  </form>
                               </section>
                               <section id="custom_html-5" class="widget_text widget widget_custom_html">
-                                 <h2 class="widget-title">Follow Us</h2>
+                                 <h2 class="widget-title" style="color: #fff;">Follow Us</h2>
                                  <div class="textwidget custom-html-widget">
                                     <div class="widget-social">
                                        <a href="#"><i class="fab fa-twitter"></i></a>
@@ -277,7 +277,7 @@
                                  </div>
                               </section>
                               <section id="categories-1" class="widget widget_categories">
-                                 <h2 class="widget-title">Categories</h2>
+                                 <h2 class="widget-title" style="color: #fff;">Categories</h2>
                                  <ul>
                                     <li class="cat-item cat-item-16"><a href="#">Branding</a> (4)</li>
                                     <li class="cat-item cat-item-23"><a href="#">Corporat</a> (3)</li>
@@ -286,7 +286,7 @@
                                  </ul>
                               </section>
                               <section id="recent-posts-4" class="widget widget_recent_entries">
-                                 <h2 class="widget-title">Recent Posts</h2>
+                                 <h2 class="widget-title" style="color: #fff;">Recent Posts</h2>
                                  <ul>
                                     <li>
                                        <a href="#">User Experience Psychology And Performance Smshing</a>
@@ -303,7 +303,7 @@
                                  </ul>
                               </section>
                               <section id="tag_cloud-1" class="widget widget_tag_cloud">
-                                 <h2 class="widget-title">Tag</h2>
+                                 <h2 class="widget-title" style="color: #fff;">Tag</h2>
                                  <div class="tagcloud">
                                      <a href="#" class="tag-cloud-link tag-link-28 tag-link-position-1" style="font-size: 8pt;" aria-label="app (1 item)">app</a>
                                     <a href="#" class="tag-cloud-link tag-link-17 tag-link-position-2" style="font-size: 8pt;" aria-label="Branding (1 item)">Branding</a>
