--- a/Furnlite.com/Furnlite/contact.html
+++ b/Furnlite.com/Furnlite/contact.html
@@ -117,7 +117,7 @@
                         <div class="col-xl-12 col-lg-12">
                             <div class="breadcrumb-wrap text-center">
                                 <div class="breadcrumb-title">
-                                    <h2>Contact Us</h2>    
+                                    <h2 style="color: #fff;">Contact Us</h2>    
                                     <div class="breadcrumb-wrap">
                               
                                 <nav aria-label="breadcrumb">
