--- a/Furnlite.com/Furnlite/single-service.html
+++ b/Furnlite.com/Furnlite/single-service.html
@@ -117,7 +117,7 @@
                         <div class="col-xl-12 col-lg-12">
                             <div class="breadcrumb-wrap text-center">
                                 <div class="breadcrumb-title">
-                                    <h2>Services Deatils</h2>    
+                                    <h2 style="color: #fff;">Services Deatils</h2>    
                                     <div class="breadcrumb-wrap">
                               
                                 <nav aria-label="breadcrumb">
@@ -146,7 +146,7 @@
                         <!-- Category Widget -->
                         <div class="sidebar-widget categories">
                             <div class="widget-content">
-                                <h2 class="widget-title"> Services List </h2>
+                                <h2 class="widget-title" style="color: #fff;"> Services List </h2>
                                 <!-- Services Category -->
                                 <ul class="services-categories">
                                     <li><a href="single-service.html">Electrical system </a></li>
@@ -160,12 +160,12 @@
                         </div>
                         <!--Service Contact-->
                         <div class="service-detail-contact wow fadeup-animation" data-wow-delay="1.1s">
-                            <h3 class="h3-title">If You Need Any Help Contact With Us</h3>
+                            <h3 class="h3-title" style="color: #fff;">If You Need Any Help Contact With Us</h3>
                             <a href="javascript:void(0);" title="Call now">+91 63633-31213</a>
                         </div>
                         <div class="sidebar-widget brochures-box">
                             <div class="inner">
-                                <h4 class="widget-title">Design Guideline</h4>
+                                <h4 class="widget-title" style="color: #fff;">Design Guideline</h4>
                                 <div class="text">Pleasure and praising pain was born and I will give you a complete account.</div>
                                    <div class="box mt-20">
                                         <div class="icon">
