--- a/Furnlite.com/Furnlite/team.html
+++ b/Furnlite.com/Furnlite/team.html
@@ -118,7 +118,7 @@
                         <div class="col-xl-12 col-lg-12">
                             <div class="breadcrumb-wrap text-center">
                                 <div class="breadcrumb-title">
-                                    <h2>Team</h2>    
+                                    <h2 style="color: #fff;">Team</h2>    
                                     <div class="breadcrumb-wrap">
                               
                                 <nav aria-label="breadcrumb">
