--- a/Furnlite.com/Furnlite/index-3.html
+++ b/Furnlite.com/Furnlite/index-3.html
@@ -233,7 +233,7 @@
                                <img src="img/icon/se-icon1.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="single-service.html">Office Solutions</a></h5>
+                                <h5><a href="office-solution.html">Office Solutions</a></h5>
                                 <p>We belive in design and engineer the office solution to make the work environment stress free, limitless, motivating, pleasure and off course comfortable.  At the same time to allow the <span style="font-weight: bold; color: rgb(23, 138, 23);">"Divine Comfort"</span> </p>
                             </div>
                             </div>
@@ -244,7 +244,7 @@
                                <img src="img/icon/se-icon2.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="#">Interior Designing</a></h5>
+                                <h5><a href="interior-design.html">Interior Designing</a></h5>
                                 <p>Trust us to elevate your interior design experience and make your dream space a reality. Transform your space into a functional and stylish haven. Our expert interior designers will collaborate with you to understand your vision and design.</p>
                             </div>
                             </div>
@@ -255,7 +255,7 @@
                                <img src="img/icon/se-icon3.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="single-service.html">Home & Space</a></h5>
+                                <h5><a href="home-space.html">Home & Space</a></h5>
                                 <p>The motto for #TEAMFURNLITE is to get the engineering via emotion, we understand our clients emotion, genie wishes and tiny details which gives soothing ambience. But the common is <span style="font-weight: bold; color: rgb(23, 138, 23);">"Divine Comfort"</span> </p>
                             </div>
                             </div>
@@ -266,7 +266,7 @@
                                <img src="img/icon/se-icon4.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="single-service.html">Retail Outlets Solutions</a></h5>
+                                <h5><a href="retail-outlet.html">Retail Outlets Solutions</a></h5>
                                 <p>At Furnlite, we strive to unite Elegancewith engineering, we are equipped with all metal-wood working machineries to deliver the sturdy yet beautiful storage solutions to retail outlets. Shine your brand, use your inch-square spaces.</p>
                             </div>
                             </div>
@@ -277,7 +277,7 @@
                                <img src="img/icon/se-icon5.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="single-service.html">ClassRoom Solutions</a></h5>
+                                <h5><a href="class-room.html">ClassRoom Solutions</a></h5>
                                 <p>Our innovative design team always look for challenges, kids invest there some time at schools and class rooms, and we care for that with our advance class room solutions to maximize the efficiency of everything. Transform your space into a functional, classy and stylish haven. </p>
                             </div>
                             </div>
