--- a/Furnlite.com/Furnlite/contact.html
+++ b/Furnlite.com/Furnlite/contact.html
@@ -32,7 +32,7 @@
                         <div class="row align-items-center">
                              <div class="col-xl-2 col-lg-2">
                                 <div class="logo">
-                                    <a href="index-2.html"><img src="img/logo/1707208486641 (8).png" alt="logo"></a>
+                                    <a href="index-2.html"><img src="img/logo/1707208486641(3).png" alt="logo"></a>
                                 </div>
                             </div>
                            <div class="col-xl-8 col-lg-8">
@@ -123,7 +123,7 @@
                                 <nav aria-label="breadcrumb">
                                     <ol class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="index-2.html">Home</a></li>
-                                        <li class="breadcrumb-item active" aria-current="page">About Us</li>
+                                        <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
                                     </ol>
                                 </nav>
                             </div>
@@ -142,7 +142,8 @@
                     
                     <div class="row">
                         <div class="col-lg-12">
-                       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d212867.83634504632!2d-112.24455686962897!3d33.52582710700138!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b743829374b03%3A0xabaac255b1e43fbe!2sPlexus%20Worldwide!5e0!3m2!1sen!2sin!4v1618567685329!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                       <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d212867.83634504632!2d-112.24455686962897!3d33.52582710700138!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b743829374b03%3A0xabaac255b1e43fbe!2sPlexus%20Worldwide!5e0!3m2!1sen!2sin!4v1618567685329!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
+                       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.535581292224!2d77.44048677411865!3d12.87324511702898!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae389ef176f5c5%3A0xe00006bac62f089!2sKumbalgodu%20Industrial%20Area%2C%20Bengaluru%2C%20Karnataka%20560074!5e0!3m2!1sen!2sin!4v1713162600420!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
@@ -160,9 +161,9 @@
                                 <div class="f-cta-icon">
                                     <i class="far fa-map"></i>
                                 </div>
-                                <h5>No 92/1</h5>
-                                <p>Gerupalaya Industrial Area <br>
-                                    Kumbalagodu,Banglore-500674</p>
+                                <h5>Address</h5>
+                                <p>No 92/1 Gerupalaya Industrial Area 
+                                    Kumbalagodu,<br> Banglore-500674</p>
                             </div>
 							 <div class="single-cta pb-30 mb-30 wow fadeInUp animated" data-animation="fadeInDown animated" data-delay=".2s">
                                 <div class="f-cta-icon">
