--- a/Furnlite.com/Furnlite/index-2.html
+++ b/Furnlite.com/Furnlite/index-2.html
@@ -373,7 +373,7 @@
                                <img src="img/icon/se-icon6.png" alt="icon"/>
                             </div>
                             <div class="second-services-content">
-                                <h5><a href="single-service.html">Our Other Services</a></h5>
+                                <h5><a href="other-service.html">Our Other Services</a></h5>
                                 <p>1. 5000 SQFT Desgin center</p>
                                 <p>2. Metal processing set-up</p>
                                 <p>3. Fiber laser cutting</p>
