--- a/Furnlite.com/Furnlite/contact.html
+++ b/Furnlite.com/Furnlite/contact.html
@@ -202,10 +202,13 @@
                                 </h2>
                                
                             </div>
+
+                            <!-- <div class="visme_d" data-title="Untitled Project" data-url="01ez0y4r-untitled-project" data-domain="forms" data-full-page="false" data-min-height="500px" data-form-id="56975"></div><script src="https://static-bundles.visme.co/forms/vismeforms-embed.js"></script> -->
                              
-						<form action="https://htmldemo.zcubethemes.com/designit/mail.php" method="post" class="contact-form mt-30">
+						<form action="https://api.web3forms.com/submit" method="POST" class="contact-form mt-30">
 							<div class="row">
                             <div class="col-lg-6">
+                                <input type="hidden" name="access_key" value="5e55ae4d-e863-426a-a24e-2df7d87b84dc">
                                 <div class="contact-field p-relative c-name mb-30">                                    
                                     <input type="text" id="firstn" name="firstn" placeholder="First Name" required>
                                 </div>                               
@@ -217,7 +220,7 @@
                             </div>
 							<div class="col-lg-6">                               
                                 <div class="contact-field p-relative c-subject mb-30">                                   
-                                    <input type="text" id="email" name="email" placeholder="Eamil" required>
+                                    <input type="text" id="email" name="email" placeholder="Email" required>
                                 </div>
                             </div>		
                             <div class="col-lg-6">                               
@@ -292,11 +295,11 @@
                                 </div>
                                 <div class="footer-link">
                                     <ul>
-                                        <li><a href="faq.html">Architecture</a></li>
-                                        <li><a href="#">Interior Work</a></li>
-                                        <li><a href="#">Retail Designs</a></li>
-                                        <li><a href="#">2D/3D Layouts</a></li>
-                                        <li><a href="#">Inter Design</a></li>
+                                        <li><a href="faq.html">Office Solutions</a></li>
+                                        <li><a href="#">Interior Designing</a></li>
+                                        <li><a href="#">Retail Outlets</a></li>
+                                        <li><a href="#">Home & Space Solutions</a></li>
+                                        <li><a href="#">Class Room Solutions</a></li>
                                         <li><a href="#">Decoration Art</a></li>
                                     </ul>
                                 </div>
