--- a/Furnlite.com/Furnlite/faq.html
+++ b/Furnlite.com/Furnlite/faq.html
@@ -298,11 +298,11 @@
                                 </div>
                                 <div class="footer-link">
                                     <ul>
-                                        <li><a href="faq.html">Architecture</a></li>
-                                        <li><a href="#">Interior Work</a></li>
-                                        <li><a href="#">Retail Designs</a></li>
-                                        <li><a href="#">2D/3D Layouts</a></li>
-                                        <li><a href="#">Inter Design</a></li>
+                                        <li><a href="faq.html">Office Solutions</a></li>
+                                        <li><a href="#">Interior Designing</a></li>
+                                        <li><a href="#">Retail Outlets</a></li>
+                                        <li><a href="#">Home & Space Solutions</a></li>
+                                        <li><a href="#">Class Room Solutions</a></li>
                                         <li><a href="#">Decoration Art</a></li>
                                     </ul>
                                 </div>
