--- a/Furnlite.com/Furnlite/service.html
+++ b/Furnlite.com/Furnlite/service.html
@@ -202,11 +202,12 @@
                             </div>
                             <div class="second-services-content">
                                 <h5><a href="other-service.html">Our Other Services</a></h5>
-                                <p>1. 5000 SQFT Desgin center</p>
-                                <p>2. Metal processing set-up</p>
-                                <p>3. Fiber laser cutting</p>
-                                <p>4. Wood processing</p>
-                                <p>5. Edge bending</p>
+                                <p>1. Corporate Interior</p>
+                                <p>2. Storage Solutions</p>
+                                <p>3. Laminates panels</p>
+                                <p>4. Metal art interior</p>
+                                <p>5. Home space saving</p>
+                                <p>6. Modular kitchens</p>
                             </div>
                             </div>
                         </div>
