--- a/Furnlite.com/Furnlite/index-3.html
+++ b/Furnlite.com/Furnlite/index-3.html
@@ -289,11 +289,12 @@
                             </div>
                             <div class="second-services-content">
                                 <h5><a href="other-service.html">Our Other Services</a></h5>
-                                <p>1. 5000 SQFT Desgin center</p>
-                                <p>2. Metal processing set-up</p>
-                                <p>3. Fiber laser cutting</p>
-                                <p>4. Wood processing</p>
-                                <p>5. Edge bending</p>
+                                <p>1. Corporate Interior</p>
+                                <p>2. Storage Solutions</p>
+                                <p>3. Laminates panels</p>
+                                <p>4. Metal art interior</p>
+                                <p>5. Home space saving</p>
+                                <p>6. Modular kitchens</p>
                             </div>
                             </div>
                         </div>
@@ -828,11 +829,11 @@
                                 </div>
                                 <div class="footer-link">
                                     <ul>
-                                        <li><a href="faq.html">Architecture</a></li>
-                                        <li><a href="#">Interior Work</a></li>
-                                        <li><a href="#">Retail Designs</a></li>
-                                        <li><a href="#">2D/3D Layouts</a></li>
-                                        <li><a href="#">Inter Design</a></li>
+                                        <li><a href="faq.html">Office Solutions</a></li>
+                                        <li><a href="#">Interior Designing</a></li>
+                                        <li><a href="#">Retail Outlets</a></li>
+                                        <li><a href="#">Home & Space Solutions</a></li>
+                                        <li><a href="#">Class Room Solutions</a></li>
                                         <li><a href="#">Decoration Art</a></li>
                                     </ul>
                                 </div>
